Fix hoodie link typo

--- a/src/index.jade
+++ b/src/index.jade
@@ -316,7 +316,7 @@ html
       section
         h2.full-slide Hoodie
         h4
-          a(href='http://hood.id') http://hood.ie
+          a(href='http://hood.ie') http://hood.ie
         aside
           ul
             li Web framework
