--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -118,3 +118,38 @@ pre {
   font-size: 70%;
   color: #888;
 }
+
+.diagram {
+    display: block;
+    max-width: 100%;
+    max-height: 100%;
+    width: auto;
+    height: auto;
+}
+
+.in-place-transition {
+  width: 100%;
+  margin: 0;
+  text-align: inherit;
+
+  .bespoke-bullet-inactive {
+    opacity: 0;
+    display: none;
+    li & {
+      transform: translateX(0);
+    }
+  }
+
+  .bespoke-bullet-active {
+    opacity: 0;
+    display: none;
+  }
+
+  .bespoke-bullet-current,
+  // Keep the first bullet/last bullet visible, to make transitions smooth
+  .bespoke-bullet-active:last-of-type,
+  .bespoke-bullet-inactive:first-of-type {
+    opacity: 1;
+    display: inherit;
+  }
+}
