Add bplus diagrams to slides

--- a/src/index.jade
+++ b/src/index.jade
@@ -565,11 +565,51 @@ html
             li Same sort of technical benefits as immutability generally
 
       section
-        h2 Append-Only B+ Trees
+        ul.bullets.in-place-transition
+          li
+            img(src='images/btree-1.png').diagram
+          li
+            img(src='images/btree-2.png').diagram
+          li
+            img(src='images/btree-3.png').diagram
+          li
+            img(src='images/btree-4.png').diagram
 
-        img(src='images/couchDbBTree.png', style='width: 400px; margin-bottom: 10px')
-        p(class='copyrightNotice')
-          | (From '<a href='http://guide.couchdb.org/draft/btree.html'>CouchDB: The Definitive Guide</a>', CC-BY) 
+      section
+        ul.bullets.in-place-transition
+          li
+            img(src='images/btree-disk-1.png').diagram
+          li
+            img(src='images/btree-disk-2.png').diagram
+          li
+            img(src='images/btree-disk-3.png').diagram
+          li
+            img(src='images/btree-disk-4.png').diagram
+
+      section
+        ul.bullets.in-place-transition
+          li
+            img(src='images/appendonly-btree-1.png').diagram
+          li
+            img(src='images/appendonly-btree-2.png').diagram
+          li
+            img(src='images/appendonly-btree-3.png').diagram
+          li
+            img(src='images/appendonly-btree-4.png').diagram
+
+      section
+        ul.bullets.in-place-transition
+          li
+            img(src='images/appendonly-btree-disk-1.png').diagram
+          li
+            img(src='images/appendonly-btree-disk-2.png').diagram
+          li
+            img(src='images/appendonly-btree-disk-3.png').diagram
+          li
+            img(src='images/appendonly-btree-disk-4.png').diagram
+
+      section
+        h2.full-slide Append-Only B+ Trees
         aside
           ul
             li This isn't a great time for a detailed primer on B+ Trees
