Update example code to include milliseconds in docs on slides too

--- a/src/index.jade
+++ b/src/index.jade
@@ -192,12 +192,12 @@ html
               do
                 curl -X POST 'http://couchdb-A:5984/demo-db' \
                      -H "content-type: application/json" \
-                     -d '{ "created_at": "'"`date`"'" }' \
+                     -d '{ "created_at": "'"`date +%s%N`"'" }' \
                      --max-time 0.1
 
                 curl -X POST 'http://couchdb-B:5984/demo-db' \
                      -H "content-type: application/json" \
-                     -d '{ "created_at": "'"`date`"'" }' \
+                     -d '{ "created_at": "'"`date +%s%N`"'" }' \
                      --max-time 0.1
               done
           pre
@@ -241,12 +241,12 @@ html
               do
                 curl -X POST 'http://couchdb-A:5984/demo-db' \
                      -H "content-type: application/json" \
-                     -d '{ "created_at": "'"`date`"'" }' \
+                     -d '{ "created_at": "'"`date +%s%N`"'" }' \
                      --max-time 0.1
 
                 curl -X POST 'http://couchdb-B:5984/demo-db' \
                      -H "content-type: application/json" \
-                     -d '{ "created_at": "'"`date`"'" }' \
+                     -d '{ "created_at": "'"`date +%s%N`"'" }' \
                      --max-time 0.1
               done
           pre
@@ -631,12 +631,12 @@ html
               do
                 curl -X POST 'http://couchdb-A:5984/demo-db' \
                      -H "content-type: application/json" \
-                     -d '{ "created_at": "'"`date`"'" }' \
+                     -d '{ "created_at": "'"`date +%s%N`"'" }' \
                      --max-time 0.1
 
                 curl -X POST 'http://couchdb-B:5984/demo-db' \
                      -H "content-type: application/json" \
-                     -d '{ "created_at": "'"`date`"'" }' \
+                     -d '{ "created_at": "'"`date +%s%N`"'" }' \
                      --max-time 0.1
               done
           pre
