Bundle a copy of Crete Round, to keep fonts working without internet

--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,5 +1,15 @@
 @import url("http://fonts.googleapis.com/css?family=Crete+Round");
 
+@font-face {
+  font-family: 'Crete Round';
+  font-style: normal;
+  font-weight: 400;
+  src: local('Crete Round'),
+       local('CreteRound-Regular'),
+       url(http://fonts.gstatic.com/s/creteround/v5/ZCcPJiCGOzh84o2siPk48YbN6UDyHWBl620a-IRfuBk.woff) format('woff'),
+       url(/fonts/CreteRound.woff) format('woff');
+}
+
 .bespoke-slide {
   background-color: #fff;
   padding: 20px;
